--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -6,4 +6,5 @@
 
 body
   background-color: aqua
+  margin: 0 auto
 
