--- a/sass/component/_header.sass
+++ b/sass/component/_header.sass
@@ -2,11 +2,21 @@
 
 .header-container
   display: flex
-  background-color: #8a68ab
-  margin: $gutter-space
   width: 100%
+  height: 100%
 
   .app-name
     float: left
   .notification, .avatar, .user-name
     float: right
+
+header
+  height: 50px
+  margin: 0
+  padding: 0
+  width: 100%
+  background-color: $header-bckgrnd-color
+  color: $header-color
+
+.user-name, .avatar, .notification
+  margin-right: 5px
