--- a/sass/component/_image.sass
+++ b/sass/component/_image.sass
@@ -7,10 +7,10 @@
 
 // target the larger images (the social media svgs)
 .lg-img
-  width: 100px
-  height: 100px
-  margin-top: 25px
-  padding-left: 15px
+  width: 80px
+  height: 80px
+  margin-left: $gutter-space
+  margin-top: 35px
 
 // the svg img tags
 .svg-facebook, .svg-google, .svg-twitter
