--- a/sass/component/_navigation.sass
+++ b/sass/component/_navigation.sass
@@ -3,6 +3,7 @@
 nav
   grid-row-start: 2
   grid-row-end: -1
+  background-color: $main-nav-bckgrnd-color
 
 .nav-item, .nav-item > a
   width: 30px
