--- a/sass/utilities/_variables.sass
+++ b/sass/utilities/_variables.sass
@@ -6,3 +6,9 @@ $gutter-space : 10px
 // Media Screen Sizes
 $tablet-screen : '(min-width:768px)'
 $desktop-screen : '(min-width:1024px)'
+
+//  Colors
+$header-color : white
+$main-nav-color : white
+$header-bckgrnd-color : #8a68ab
+$main-nav-bckgrnd-color: #553482
